map-app/styles/style.css - prevent initiative sidebar content overflow
Without this it can peep out when supposedly hidden off screen

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -393,6 +393,8 @@ body {
 
 .sea-initiative-sidebar-content {
   padding: 0;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .sea-initiative-sidebar {
